# LiThermal

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
assets/: ProPrj_[LiThermal]热成像相机.epro
include/: animations.h  cameraUtils.h  httplib.h  lottie_jsons.h  lottie_rec.h  lv_conf.h  lv_drv_conf.h  myHAL.h  my_main.h  settingsStorage.h  stream.h  stream_def.h  stream_video.h  ui.h  videoCodec.h  videoPlayer.h
include/util/: log.h  logext.h  logger.h  rate.h  throw_error.h
include/utils/: filenameAllocator.h  tiny_jpeg.h
libs/lv_drivers/display/: g2d_driver.h  g2d_driver_enh.h  sunxifb.c  sunxifb.h  sunxig2d.c  sunxig2d.h  sunximem.c  sunximem.h
libs/lv_drivers/indev/: evdev.c
libs/lvgl/src/extra/libs/ffmpeg/: lv_ffmpeg.c
libs/lvgl/src/extra/libs/fsdrv/: lv_fs_stdio.c
libs/lvgl/src/widgets/: lv_checkbox.c
linux_include/: sunxi_display2.h
src/: Backlight.cpp  PowerManager.cpp  Stream.cpp  animations.cpp  boot_wait.cpp  cameraUtils.cpp  customtick.c  main.cpp  myHAL.cpp  settingsStorage.cpp  stream_def.cpp  stream_video.cpp  videoCodec.cpp  videoPlayer.cpp
src/fonts/: crosshairs.c  ui_font_ali24.c  ui_font_ali36.c  ui_font_chinese16.c  ui_font_fontawesome16.c  ui_font_fontawesome24.c
src/imgs/: bolt.c  bootlogo_full.c  clapperboard.c  ui_img_loading_png.c
src/ui/: batteryCard.cpp  brightnessSlider.cpp  button_2.cpp  camera.cpp  crosshairs.cpp  graph.cpp  poweroff.cpp  videoRecorder.cpp
src/ui/menu/: advanced.cpp  basic.cpp  gallery.cpp  system.cpp
src/utils/: filenameAllocator.cpp
tools/: BSOD.c
(+1 files in other folders)
